addons/registry/manifests/ingress-nginx/registry-ingress-nginx.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: k2s-ca-issuer
    cert-manager.io/common-name: k2s.registry.local
  name: registry-nginx-local
  namespace: registry
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k2s.registry.local
      secretName: k2s-registry-local-tls
  rules:
    - host: k2s.registry.local
      http:
        paths:
        - backend:
            service:
              name: registry
              port: 
                number: 5000
          pathType: Prefix
          path: /
